--- a/less/moza.less
+++ b/less/moza.less
@@ -1,96 +1,20 @@
-/**
-* reset css
-*/
-html, body, div, span, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-abbr, address, cite, code,
-del, dfn, em, img, ins, kbd, q, samp,
-small, strong, sub, sup, var,
-b, i,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	outline: 0;
-	font-size: 100%;
-	vertical-align: baseline;
-	background: transparent;
-}
-
-li {
-	list-style: none;
-}
-
-/* html5 IE fix */
-header, nav, section, aside, footer, time, figure, figcaption {
-	display: block
-}
-
 /* default */
 html, body {
 	width: 100%;
 	height: 100%;
+	padding:0;margin:0;
 }
-
 body {
 	font-size: 12px;
 	color: #000;
 	font-family: arial;
 }
-/*
-#dashboard{
-	a,
-	a:active {
-		text-decoration: none;
-	}#data {
-		 height: 0;
-		 overflow: hidden;
-		 position: absolute;
-		 width: 0;
-	 }
+li {
+	list-style: none;
 }
-*/
-
-/* util */
-.clearfix:after {
-	content: ".";
-	display: block;
-	height: 0;
-	clear: both;
-	visibility: hidden;
-}
-
-/**
-*
-*/
-/*
-#dashboard {
-	margin: 0 auto;
-	background-color: #fff;
-	height: 500px;
-	width: 700px;
-	position: relative;
-	#contentCtn {
-		z-index: 1;
-		position: relative;
-		overflow: hidden;
-		height: 100%;
-		.wrapper {
-			overflow: hidden;
-			height: 100%;.wrapper {
-				margin-top: 0px;
-			}
-		}
-	}
-}*/
 
 /* Grid */
-#grid {
+#moza {
 	display: block;
 	height: 500px;
 	width: 700px;
@@ -109,9 +33,9 @@ body {
 			width: 100%;
 			z-index: 1;
 			background: #EEEEEE;
-		}
-		&:hover img {
-			opacity: 0.85;
+			&:hover img {
+				opacity: 0.85;
+			}
 		}
 		span {
 			display: block;
@@ -149,41 +73,5 @@ body {
 			width: 100%;
 			z-index: 2;
 		}
-	}
-}
-
-#toolTips .category,
-#grid .category {
-	color: #aaaaaa;
-	display: block;
-	line-height: 11px;
-	padding-bottom: 0;
-	text-transform: uppercase;
-	font-size: 9px;
-}
-
-/* Components - util - tools */
-#toolTips {
-	background-color: #000;
-	position: absolute;
-	font-size: 11px;
-	line-height: 15px;
-	color: #fff;
-	padding: 7px;
-	display: none;
-	z-index: 3;
-	visibility: hidden;
-	opacity: 0;
-	max-width: 155px;
-	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.75);
-	.arrow {
-		background: url(../img/sprite.png) -36px 0 no-repeat transparent;
-		width: 11px;
-		height: 6px;
-		position: absolute;
-		top: -6px;
-		left: 50%;
-		margin-left: -5.5px;
-		display: block;
 	}
 }
